--- a/src/apps_common/gallery/static/gallery/scss/gallery.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery.scss
@@ -50,6 +50,7 @@
       width: 100%;
       height: 100%;
       cursor: pointer;
+      @include unselectable();
 
       &:hover {
         background-color: rgba(255, 255, 255, 0.1);
