--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -42,6 +42,13 @@
   }
 }
 
+// Стили текста по умолчанию
+@mixin default_font() {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  line-height: 1.4;
+}
+
 // Текст, уходящий в тень.
 @mixin long_text($shadow_color: black, $shadow_width: 1.6em, $shadow_height: 100%) {
   position: relative;
