--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -55,6 +55,8 @@
     }
   }
   input, button, select, textarea {
+    font: inherit;
+    font-size: 100%;
     margin: 0;
     outline: 0;
     box-sizing: border-box;
