--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -10,24 +10,19 @@
 @import 'mixins/valign';
 @import 'mixins/unselectable';
 
+$desktop: 1200px;
+$tablet_wide: 1024px;
+$tablet: 768px;
+$mobile_wide: 640px;
+
 // Размеры окна
-@mixin media($name) {
+@mixin media($args...) {
   @function media-value($value) {
     $conversion-map: (
-      // < 888px
-            mobile : "screen and (max-width: 55.5em)",
-      // 888px - 984px
-            tablet : "screen and (min-width: 55.5em) and (max-width: 61.5em)",
-      // 984px - 1200px
-            desktop_16: "screen and (min-width: 61.5em) and (max-width: 75em)",
-      // 1200px - 1392px
-            desktop_16_19: "screen and (min-width: 75em) and (max-width: 87em)",
-      // > 1392px
-            desktop_over_19: "screen and (min-width: 87em)",
-      // > 1680px
-            desktop_over_22: "screen and (min-width: 105em)",
-      // > 1872px
-            desktop_over_25: "screen and (min-width: 117em)"
+      wide: "screen and (min-width: #{$desktop})",
+      desktop: "screen and (min-width: #{$tablet_wide}) and (max-width: #{$desktop - 1px})",
+      tablet: "screen and (min-width: #{$tablet}) and (max-width: #{$tablet_wide - 1px})",
+      mobile: "screen and (max-width: #{$tablet - 1px})"
     );
 
     @if map-has-key($conversion-map, $value) {
@@ -37,8 +32,10 @@
     }
   }
 
-  @media #{media-value($name)} {
-    @content;
+  @each $name in $args {
+    @media #{media-value($name)} {
+      @content;
+    }
   }
 }
 
