--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -36,13 +36,12 @@
   caption, th, td {
     text-align: left;
     font-weight: normal;
-    vertical-align: middle;
+    vertical-align: top;
   }
   q, blockquote {
     quotes: none;
     &:before, &:after {
       content: "";
-      content: none;
     }
   }
   a {
