--- a/src/apps_common/gallery/static/gallery/scss/gallery.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery.scss
@@ -11,6 +11,7 @@
     cursor: pointer;
     overflow: hidden;
     margin: 0 8px 8px 0;
+    @include unselectable;
 
     &:nth-child(4n) {
       margin-right: 0;
