--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -1,4 +1,5 @@
 @import 'mixins/reset';
+@import 'mixins/animations';
 @import 'mixins/clearfix';
 @import 'mixins/grayscale';
 @import 'mixins/opacity';
