--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -21,10 +21,17 @@
     font: inherit;
     font-size: 100%;
     vertical-align: baseline;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
   html {
     line-height: 1;
+  }
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
   ol, ul {
     list-style: none;
