--- a/src/templates/admin/base.html
+++ b/src/templates/admin/base.html
@@ -21,7 +21,7 @@
   {% endif %}
   
   {% block extrahead %}
-    <link rel="icon" type="image/ico" href="{% static 'img/favicon.ico' %}"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}"/>
   {% endblock %}
   
   {% url 'jsi18n' as jsi18nurl %}
