--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -11,8 +11,8 @@
     <meta name="description" content="{{ seo.description }}" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{% static 'img/favicon.ico' %}" rel="icon" type="image/x-icon" />
-    <link rel="apple-touch-icon-precomposed" sizes="32x32" href="{% static 'img/favicon.ico' %}">
+    <link href="{% static 'img/favicon.png' %}" rel="icon" type="image/x-icon" />
+    <link rel="apple-touch-icon-precomposed" sizes="32x32" href="{% static 'img/favicon.png' %}">
     <script type="text/javascript" src="{% url 'jsi18n' %}"></script>
 
     {% opengraph %}
