_rem -> _font_size

--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -2,11 +2,11 @@
 @import 'mixins/border_radius';
 @import 'mixins/box_sizing';
 @import 'mixins/clearfix';
+@import 'mixins/font_size';
 @import 'mixins/reset';
 @import 'mixins/grayscale';
 @import 'mixins/linear_gradient';
 @import 'mixins/opacity';
-@import 'mixins/rem';
 @import 'mixins/transition';
 @import 'mixins/transform';
 @import 'mixins/valign';
