--- a/src/apps/users/static/users/scss/profile.scss
+++ b/src/apps/users/static/users/scss/profile.scss
@@ -41,11 +41,11 @@
     position: absolute;
     top: -17px;
     right: 0;
-    font-size: 0;
     line-height: 0;
     width: 17px;
     height: 17px;
     background: url(../img/delete_avatar.gif) no-repeat center center rgba(0, 0, 0, 0.8);
+    @include font-size(0);
   }
   &:hover .delete-avatar {
     top: 0;
