--- a/src/apps_common/comments/static/comments/scss/comments.scss
+++ b/src/apps_common/comments/static/comments/scss/comments.scss
@@ -40,9 +40,9 @@
       margin-top: 5px;
 
       span {
-        font-size: 13px;
         font-weight: bold;
         vertical-align: middle;
+        @include font-size(13px);
       }
 
       a {
@@ -75,8 +75,8 @@
     }
     .date {
       color: #808080;
-      font-size: 10px;
       margin-top: 10px;
+      @include font-size(10px);
     }
   }
   .text {
@@ -85,7 +85,7 @@
   }
   .actions {
     margin-top: 4px;
-    font-size: 10px;
+    @include font-size(10px);
 
     a {
       color: #808080;
