--- a/src/static/scss/header.scss
+++ b/src/static/scss/header.scss
@@ -20,7 +20,7 @@
   a {
     display: inline-block;
     vertical-align: middle;
-    font-size: 45px;
+    @include font-size(45px);
   }
   a:hover {
     text-decoration: none;
