--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -1,6 +1,7 @@
 @import 'mixins';
 
 .grid {
+  width: 100%;
   max-width: $grid_max_width;
   @include clearfix;
   @include grid-paddings;
@@ -26,13 +27,6 @@
     }
   }
 
-  .grid-col-wide-2:nth-of-type(4n+1) {
-    clear: left;
-  }
-  .grid-col-wide-4:nth-of-type(2n+1) {
-    clear: left;
-  }
-
   .grid-col-wide-8 {
     @extend .col;
     width: 100%;
@@ -47,13 +41,6 @@
       float: left;
       width: 12.5% * $index;
     }
-  }
-
-  .grid-col-2:nth-of-type(4n+1) {
-    clear: left;
-  }
-  .grid-col-4:nth-of-type(2n+1) {
-    clear: left;
   }
 
   .grid-col-8 {
@@ -72,13 +59,6 @@
     }
   }
 
-  .grid-col-tablet-2:nth-of-type(4n+1) {
-    clear: left;
-  }
-  .grid-col-tablet-4:nth-of-type(2n+1) {
-    clear: left;
-  }
-
   .grid-col-tablet-8 {
     @extend .col;
     width: 100%;
@@ -93,10 +73,6 @@
       float: left;
       width: 25% * $index;
     }
-  }
-
-  .grid-col-mobile-2:nth-of-type(2n+1) {
-    clear: left;
   }
 
   .grid-col-mobile-4 {
