--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -98,6 +98,12 @@ fieldset.errors {
   }
 }
 
+// Основной контейнер
+#wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
 .container {
   width: 960px;
   margin: 0 auto;
