--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -73,22 +73,8 @@ $grid_max_width: 1400px;
 @mixin default_font() {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
-  @include font-size(12px);
-}
-
-// Текст, уходящий в тень.
-@mixin long_text($shadow_color: black, $shadow_width: 1.6em, $shadow_height: 100%) {
-  position: relative;
-  overflow: hidden;
-  word-wrap: break-word;
-
-  &:after {
-    content: '';
-    position: absolute;
-    @include linear-gradient(to left, $shadow_color 0, rgba(0, 0, 0, 0) 100%);
-    height: $shadow_height;
-    width: $shadow_width;
-    bottom: 0;
-    right: 0;
+  @include font-size(16px);
+  @media screen and (max-width: $mobile_wide) {
+    @include font-size(14px);
   }
 }
