--- a/src/static/scss/bxslider/slider.scss
+++ b/src/static/scss/bxslider/slider.scss
@@ -5,173 +5,141 @@
 
 .bx-wrapper {
   position: relative;
-  margin: 0 auto 10px;
+  margin: 0 auto;
   @include font-size(0);
+  @include box_sizing(border-box);
   *zoom: 1;
-}
 
-.bx-wrapper img {
-  display: block;
-}
+  img {
+    display: block;
+  }
 
-.bx-wrapper .bx-controls:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+  .bx-viewport {
+    position: relative;
+    z-index: 2;
+    @include transform(translatez(0));
+  }
 
-/** THEME
-===================================*/
+  .bx-controls {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    z-index: 1;
+    @include clearfix;
+  }
 
-.bx-wrapper .bx-viewport {
-  /*fix other elements on the page moving (on Chrome)*/
-  @include transform(translatez(0));
-}
+  .bx-controls-direction {
+    a {
+      position: absolute;
+      width: 50px;
+      height: 100%;
+      top: 0;
+      outline: 0;
+      text-indent: -9999px;
+      z-index: 50;
+      @include opacity(0.4);
+      @include unselectable;
 
-/* LOADER */
+      &.bx-prev {
+        left: -30px;
+        @include transform(rotate(180deg));
+      }
 
-.bx-wrapper .bx-loading {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  min-height: 50px;
-  background: url(bx_loader.gif) center center no-repeat #fff;
-  z-index: 2000;
+      &.bx-next {
+        right: -30px;
+      }
+
+      &.disabled {
+        display: none;
+      }
+
+      &:before {
+        content: '';
+        position: absolute;
+        width: 32px;
+        height: 31px;
+        left: 50%;
+        top: 50%;
+        margin-left: -18px;
+        margin-top: -18px;
+        background: url(slider_controls.png) no-repeat -43px 0;
+      }
+
+      &:hover {
+        @include opacity(0.8);
+      }
+      
+      &:active {
+        top: 1px;
+      }
+    }
+  }
+
+  /* LOADER */
+  .bx-loading {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    min-height: 50px;
+    background: url(bx_loader.gif) center center no-repeat #fff;
+    z-index: 2000;
+  }
 }
 
 /* PAGER */
-
 .bx-pager {
-  padding: 20px 0;
+  padding: 40px 0;
   text-align: center;
   @include font-size(0);
   @include box_sizing(border-box);
-}
+  @include media(desktop) {
+    padding: 30px 0;
+  }
+  @include media(mobile, tablet) {
+    padding: 20px 0;
+  }
 
-.bx-pager .bx-pager-item,
-.bx-wrapper .bx-controls-auto .bx-controls-auto-item {
-  display: inline-block;
-  *zoom: 1;
-  *display: inline;
-  @include unselectable;
-}
+  .bx-pager-item {
+    display: inline-block;
+    margin: 0 2px;
+    @include unselectable;
+  }
 
-.bx-pager.bx-default-pager a {
-  display: block;
-  width: 10px;
-  height: 10px;
-  margin: 0 5px;
-  text-indent: -9999px;
-  background: #666;
-  outline: 0;
-  @include border_radius(50%);
-}
+  &.bx-default-pager {
+    a {
+      position: relative;
+      display: block;
+      width: 20px;
+      height: 20px;
+      text-indent: -9999px;
+      @include opacity(0.4);
+      @include transition(transform 0.3s);
 
-.bx-pager.bx-default-pager a:hover,
-.bx-pager.bx-default-pager a.active {
-  background: #000;
-}
+      &:before {
+        content: '';
+        position: absolute;
+        width: 12px;
+        height: 12px;
+        left: 50%;
+        top: 50%;
+        margin-top: -6px;
+        margin-left: -6px;
+        background: $blue;
+        @include border_radius(50%);
+      }
 
-/* DIRECTION CONTROLS (NEXT / PREV) */
+      &:hover {
+        @include opacity(0.6);
+        @include transform(scale(1.3));
+      }
 
-.bx-wrapper .bx-prev {
-  left: 10px;
-  background: url(slider_controls.png) no-repeat 0 -32px;
-}
-
-.bx-wrapper .bx-next {
-  right: 10px;
-  background: url(slider_controls.png) no-repeat -43px -32px;
-}
-
-.bx-wrapper .bx-prev:hover {
-  background-position: 0 0;
-}
-
-.bx-wrapper .bx-next:hover {
-  background-position: -43px 0;
-}
-
-.bx-wrapper .bx-controls-direction a {
-  position: absolute;
-  width: 32px;
-  height: 32px;
-  top: 50%;
-  margin-top: -16px;
-  outline: 0;
-  text-indent: -9999px;
-  z-index: 50;
-  @include unselectable;
-}
-
-.bx-wrapper .bx-controls-direction a.disabled {
-  display: none;
-}
-
-/* AUTO CONTROLS (START / STOP) */
-
-.bx-wrapper .bx-controls-auto {
-  padding-top: 10px;
-  text-align: center;
-}
-
-.bx-wrapper .bx-controls-auto .bx-start {
-  display: block;
-  width: 10px;
-  height: 11px;
-  margin: 0 3px;
-  outline: 0;
-  text-indent: -9999px;
-  background: url(slider_controls.png) -86px -11px no-repeat;
-}
-
-.bx-wrapper .bx-controls-auto .bx-start:hover,
-.bx-wrapper .bx-controls-auto .bx-start.active {
-  background-position: -86px 0;
-}
-
-.bx-wrapper .bx-controls-auto .bx-stop {
-  display: block;
-  width: 9px;
-  height: 11px;
-  margin: 0 3px;
-  outline: 0;
-  text-indent: -9999px;
-  background: url(slider_controls.png) -86px -44px no-repeat;
-}
-
-.bx-wrapper .bx-controls-auto .bx-stop:hover,
-.bx-wrapper .bx-controls-auto .bx-stop.active {
-  background-position: -86px -33px;
-}
-
-/* PAGER WITH AUTO-CONTROLS HYBRID LAYOUT */
-
-.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {
-  width: 80%;
-  text-align: left;
-}
-
-.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {
-  float: right;
-  width: 35px;
-}
-
-/* IMAGE CAPTIONS */
-
-.bx-wrapper .bx-caption {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  background: #666 \9;
-  background: rgba(80, 80, 80, 0.75);
-}
-
-.bx-wrapper .bx-caption span {
-  display: block;
-  padding: 10px;
-  color: #fff;
+      &:active, &.active {
+        @include opacity(1);
+      }
+    }
+  }
 }
