--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,21 +1,3 @@
-<div id="footer" class="container">
-    <div class="column">
-        <p class="title-h2">Welcome to my website</p>
-        <p>In posuere eleifend odio quisque semper augue mattis wisi maecenas ligula. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh.</p>
-    </div>
-    <div class="column">
-        <p class="title-h2">Etiam rhoncus volutpat</p>
-        <p>Sed lacus. Donec lectus. Nullam pretium nibh ut turpis. Nam bibendum. In nulla tortor, elementum vel, tempor at, varius non, purus. Mauris vitae nisl nec metus consectetuer. Donec ipsum. Proin imperdiet est. Phasellus dapibus semper urna.</p>
-    </div>
-    <div class="column column-last">
-        <p class="title-h2">Recommended Links</p>
-        <ul>
-            <li><a href="#">Consectetuer adipiscing elit</a></li>
-            <li><a href="#">Metus aliquam pellentesque</a></li>
-            <li><a href="#">Suspendisse iaculis mauris</a></li>
-            <li><a href="#">Urnanet non molestie semper</a></li>
-            <li><a href="#">Proin gravida orci porttitor</a></li>
-        </ul>
-    </div>
+<div id="footer">
+    <p class="copyright">&copy; {% now "Y" %} <a href="/" rel="nofollow">Project</a></p>
 </div>
-<p id="copyright">&copy; {% now "Y" %} <a href="/" rel="nofollow">Project</a></p>
