--- a/src/static/scss/footer.scss
+++ b/src/static/scss/footer.scss
@@ -1,22 +1,12 @@
 @import 'mixins';
 
 #footer {
-  @include clearfix;
-
-  .column {
-    float: left;
-    width: 305px;
-    margin-right: 30px;
-  }
-  .column-last {
-    width: 210px;
-    margin-right: 0;
+  .copyright {
+    margin: 0;
+    text-align: center;
+    padding: 10px 0 30px 0;
+    @include font-size(9px);
   }
 }
 
-#copyright {
-  margin: 0;
-  text-align: center;
-  padding: 10px 0 30px 0;
-  @include font-size(9px);
-}
+
