--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,6 +1,6 @@
 {% load menu %}
 
-<div id="header" class="container">
+<div id="header">
     <div class="grid">
         <div class="grid-col-wide-2 grid-col-2 grid-col-tablet-2">
             <a href="/" id="logo">Project</a>
