--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -7,6 +7,7 @@
 @import 'mixins/grayscale';
 @import 'mixins/linear_gradient';
 @import 'mixins/opacity';
+@import 'mixins/placeholder';
 @import 'mixins/transition';
 @import 'mixins/transform';
 @import 'mixins/valign';
