--- a/src/apps_common/comments/templates/comments/admin/admin_include.html
+++ b/src/apps_common/comments/templates/comments/admin/admin_include.html
@@ -1,15 +1,14 @@
 {% load i18n %}
 {% load comments %}
-{% load admin_static %}
 
 <script>
     var admin_comments_delete = "{% url 'admin_comments:delete' %}";
     var admin_comments_restore = "{% url 'admin_comments:restore' %}";
 </script>
 
-{% if original.pk %}
-    <h2>{% trans 'Comments' %}</h2>
-    
+<h2>{% trans 'Comments' %}</h2>
+
+{% if entity %}
     <table class="table table-striped table-bordered table-hover table-condensed">
     <col width="4%"/>
     <col width="20%"/>
@@ -67,5 +66,6 @@
         {% endfor %}
     </tbody>
     </table>
-    
+{% else %}
+    <div class="alert alert-danger">{% trans 'You should create instance first' %}</div>
 {% endif %}
