--- a/src/static/scss/mixins/_animations.scss
+++ b/src/static/scss/mixins/_animations.scss
@@ -1,17 +1,17 @@
 @mixin keyframes($animation_name) {
-  @-webkit-keyframes $animation_name {
+  @-webkit-keyframes #{$animation_name} {
     @content;
   }
 
-  @-moz-keyframes $animation_name {
+  @-moz-keyframes #{$animation_name} {
     @content;
   }
 
-  @-o-keyframes $animation_name {
+  @-o-keyframes #{$animation_name} {
     @content;
   }
 
-  @keyframes $animation_name {
+  @keyframes #{$animation_name} {
     @content;
   }
 }
