--- a/src/static/scss/mixins/_box_sizing.scss
+++ b/src/static/scss/mixins/_box_sizing.scss
@@ -4,3 +4,9 @@
   -moz-box-sizing: $args;
   box-sizing: $args;
 }
+
+@mixin border-box() {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
