--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -69,8 +69,10 @@
     font-size: 100%;
     margin: 0;
     outline: 0;
-    box-sizing: border-box;
     vertical-align: middle;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
   }
   textarea {
     resize: none;
