--- a/src/static/scss/jquery.scrollbar-theme.scss
+++ b/src/static/scss/jquery.scrollbar-theme.scss
@@ -1,66 +1,46 @@
 @import "mixins";
 
-.scroll-textarea {
-  > .scroll-element,
-  > .scroll-element div {
-    border: none;
-    margin: 0;
-    padding: 0;
+.scroll-wrapper {
+  > .scroll-element {
     position: absolute;
     z-index: 10;
-  }
+    @include border-box;
 
-  > .scroll-element {
-    .scroll-element_outer,
-    .scroll-element_track,
+    div {
+      position: absolute;
+      display: block;
+      height: 100%;
+      left: 0;
+      top: 0;
+      width: 100%;
+      z-index: 10;
+    }
+
     .scroll-bar {
+      min-height: 20px;
+      background-color: #000000;
       @include border_radius(8px);
     }
 
     .scroll-element_outer {
+      position: relative;
       overflow: hidden;
     }
 
-    .scroll-element_track,
-    .scroll-bar {
-      @include opacity(0.4);
+    &.scroll-x {
+      bottom: 4px;
+      height: 4px;
+      left: 0;
+      width: 100%;
+      padding: 0 4px;
     }
 
-    .scroll-element_track {
-      background-color: #e0e0e0;
+    &.scroll-y {
+      height: 100%;
+      right: 4px;
+      top: 0;
+      width: 4px;
+      padding: 4px 0;
     }
-
-    .scroll-bar {
-      background-color: #c2c2c2;
-    }
-
-    &.scroll-draggable,
-    &:hover {
-      .scroll-bar {
-        background-color: #919191;
-      }
-    }
-  }
-
-  > .scroll-element div {
-    display: block;
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 100%;
-  }
-
-  > .scroll-element.scroll-x {
-    bottom: 2px;
-    height: 8px;
-    left: 0;
-    width: 100%;
-  }
-
-  > .scroll-element.scroll-y {
-    height: 100%;
-    right: 2px;
-    top: 0;
-    width: 8px;
   }
 }
