--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -1,30 +1,45 @@
 @import 'mixins';
 
-#main-menu {
-  height: 50px;
-  text-align: center;
-  @include valign_middle;
-  @include font-size(0);
+@include media(desktop, wide) {
+  #main-menu {
+    text-align: center;
+    font-weight: bold;
+    height: auto !important;
+    color: #000000;
+    @include no_fontsize;
+    @include valign_middle;
 
-  ul {
-    display: inline-block;
-    vertical-align: middle;
-
-    li {
+    ul {
       display: inline-block;
-      margin: 0 5px;
+      vertical-align: middle;
 
-      a {
+      li {
         display: inline-block;
-        padding: 5px 10px;
-        @include font-size(16px);
+        margin: 0 5px;
 
-        &:hover {
-          @include opacity(0.8);
+        &:nth-of-type(1) {
+          margin-left: 0;
         }
-      }
-      &.active {
-        color: blue;
+        &:nth-last-of-type(1) {
+          margin-right: 0;
+        }
+
+        a {
+          display: inline-block;
+          padding: 5px 10px;
+          @include default_fontsize;
+
+          &:hover {
+            @include opacity(0.8);
+          }
+        }
+        &.active {
+          color: #2020FF;
+
+          a:hover {
+            @include opacity(1);
+          }
+        }
       }
     }
   }
@@ -35,8 +50,8 @@
   display: none;
   position: relative;
   float: right;
-  width: 40px;
-  height: 35px;
+  width: 36px;
+  height: 27px;
   cursor: pointer;
   text-align: left;
   z-index: 15;
@@ -49,29 +64,79 @@
     content: '';
     position: absolute;
     width: 100%;
-    height: 6px;
+    height: 5px;
     background: #fff;
   }
   &:before {
-    top: 14px;
-    box-shadow: #fff 0 -14px 0 0;
-    @include transition(transform 0.3s, box-shadow 0.2s 0.1s);
+    top: 11px;
+    box-shadow: #fff 0 -11px 0 0;
+    @include transition(-webkit-transform 0.75s, box-shadow 0.2s 0.1s);
+    @include transition(transform 0.75s, box-shadow 0.2s 0.1s);
   }
   &:after {
     bottom: 0;
-    @include transition(transform 0.3s);
+    @include transition(-webkit-transform 0.75s);
+    @include transition(transform 0.75s);
   }
 
   &.active {
     &:before {
       top: 14px;
       box-shadow: transparent 0 0 0 0;
-      @include transform(rotate(45deg));
-      @include transition(transform 0.3s, box-shadow 0s 0s);
+      @include transform(rotate(225deg));
+      @include transition(-webkit-transform 0.75s, box-shadow 0s 0s);
+      @include transition(transform 0.75s, box-shadow 0s 0s);
     }
     &:after {
       top: 14px;
-      @include transform(rotate(-45deg));
+      @include transform(rotate(315deg));
+    }
+  }
+}
+
+@include media(mobile, tablet) {
+  #main-menu {
+    position: absolute;
+    right: -100%;
+    top: 0;
+    width: 80%;
+    background: #2020FF;
+    z-index: 12;
+    padding: 0 70px;
+    @include border-box;
+    @include transition(right 0.4s);
+    @include valign_middle;
+
+    ul {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    li {
+      margin: 14px 0;
+
+      a {
+        color: #000000;
+        font-weight: bold;
+        @include font-size(26px);
+
+        &:hover {
+          text-decoration: none;
+          @include opacity(0.8);
+        }
+      }
+
+      &.active > a {
+        color: #2020FF;
+
+        &:hover {
+          @include opacity(1);
+        }
+      }
+    }
+
+    &.active {
+      right: 0;
     }
   }
 }
