--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -14,7 +14,7 @@
 .grid-col {
   min-height: 1px;
   padding: 0 $grid_col_padding;
-  @include box_sizing(border-box);
+  @include border-box;
 }
 
 
