--- a/src/static/scss/bxslider/slider.scss
+++ b/src/static/scss/bxslider/slider.scss
@@ -6,8 +6,8 @@
 .bx-wrapper {
   position: relative;
   margin: 0 auto;
-  @include font-size(0);
-  @include box_sizing(border-box);
+  @include border-box;
+  @include no_fontsize;
   *zoom: 1;
 
   img {
@@ -27,8 +27,8 @@
     height: 100%;
     top: 0;
     z-index: 1;
+    @include border-box;
     @include clearfix;
-    @include box_sizing(border-box);
   }
 
   .bx-controls-direction {
@@ -98,8 +98,8 @@
 .bx-pager {
   padding: 40px 0;
   text-align: center;
-  @include font-size(0);
-  @include box_sizing(border-box);
+  @include border-box;
+  @include no_fontsize;
   @include media(desktop) {
     padding: 30px 0;
   }
