--- a/src/apps_common/seo/templates/seo/block.html
+++ b/src/apps_common/seo/templates/seo/block.html
@@ -1,8 +1,8 @@
-{% if seo.text %}
+{% if instance.text %}
     <div id="seo-text">
         <div class="grid">
             <div class="grid-col-8">
-                <p class="text">{{ seo.text|striptags|linebreaksbr }}</p>
+                <p class="text">{{ instance.text|striptags|linebreaksbr }}</p>
             </div>
         </div>
     </div>
