--- a/src/apps_common/seo/templates/seo/admin/admin_include.html
+++ b/src/apps_common/seo/templates/seo/admin/admin_include.html
@@ -3,6 +3,7 @@
 {% if object_id %}
     {{ adminForm.media }}
 
+    <div class="alert alert-info">{% trans 'Attention! Errors in SEO form will not prevent saving of main form' %}</div>
     {% for fieldset in adminForm %}
         {% include 'admin/includes/fieldset.html' %}
     {% endfor %}
