--- a/src/static/scss/mixins/_box_sizing.scss
+++ b/src/static/scss/mixins/_box_sizing.scss
@@ -6,7 +6,5 @@
 }
 
 @mixin border-box() {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  @include box_sizing(border-box);
 }
