--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -2,11 +2,11 @@
 
 <div id="header">
     <div class="grid">
-        <div class="grid-col-wide-2 grid-col-2 grid-col-tablet-2">
-            <a href="/" id="logo">Project</a>
+        <div class="grid-col-wide-2 grid-col-2 grid-col-tablet-2 grid-col-mobile-3">
+            <a href="/" id="logo"></a>
         </div>
 
-        <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-6">
+        <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-6 grid-col-mobile-1">
             <span id="mobile-menu"></span>
             <div id="main-menu">
                 {% main_menu %}
