holy grail, fix header, fix menu

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -21,18 +21,16 @@
     <div id="video" data-video="{% static 'main/img/river.mp4' %}"
             style="background-image: url({% static 'main/img/river.jpg' %})">
 
-        <div class="content">
-            <div class="grid">
-                <div class="grid-col-wide-8 grid-col-8 grid-col-tablet-8 grid-col-mobile-4"
-                     style="height: 200px; background: gray">
-                </div>
+        <div class="content grid">
+            <div class="grid-col-wide-8 grid-col-8 grid-col-tablet-8 grid-col-mobile-4"
+                 style="height: 200px; background: gray">
+            </div>
 
-                <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
-                     style="height: 50px; background: blue">
-                </div>
-                <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
-                     style="height: 50px; background: yellow">
-                </div>
+            <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
+                 style="height: 50px; background: blue">
+            </div>
+            <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-4 grid-col-mobile-2"
+                 style="height: 50px; background: yellow">
             </div>
         </div>
     </div>
