--- a/src/static/scss/mixins/_valign.scss
+++ b/src/static/scss/mixins/_valign.scss
@@ -1,4 +1,9 @@
 // Вертикальное центрирование
+@mixin valign_transform() {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 @mixin valign_middle() {
   &:after {
     content: '';
