--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,12 +1,12 @@
 {% load menu %}
 
 <div id="header">
-    <div class="grid">
-        <div class="grid-col-wide-2 grid-col-2 grid-col-tablet-2 grid-col-mobile-3">
+    <div class="table grid">
+        <div class="cell grid-col-wide-2 grid-col-2 grid-col-tablet-7 grid-col-mobile-3">
             <a href="/" id="logo"></a>
         </div>
 
-        <div class="grid-col-wide-4 grid-col-4 grid-col-tablet-6 grid-col-mobile-1">
+        <div class="cell grid-col-wide-4 grid-col-4 grid-col-tablet-1 grid-col-mobile-1">
             <span id="mobile-menu"></span>
             <div id="main-menu">
                 {% main_menu %}
