--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -9,14 +9,12 @@
   background: no-repeat center red;
   background-size: cover;
   @include no_fontsize;
-  @include valign_middle;
 
   .content {
     position: relative;
-    display: inline-block;
     width: 100%;
     z-index: 2;
-    vertical-align: middle;
+    @include valign_transform;
   }
 }
 
