--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -1,44 +1,46 @@
 @import 'mixins';
 
+
 @include media(desktop, wide) {
   #main-menu {
+    height: auto !important;
     text-align: center;
     font-weight: bold;
-    height: auto !important;
-    color: #000000;
+    color: #FFFFFF;
     @include no_fontsize;
     @include valign_middle;
 
     ul {
       display: inline-block;
       vertical-align: middle;
+    }
 
-      li {
+    li {
+      display: inline-block;
+      margin: 0 5px;
+
+      &:nth-of-type(1) {
+        margin-left: 0;
+      }
+      &:nth-last-of-type(1) {
+        margin-right: 0;
+      }
+
+      a {
         display: inline-block;
-        margin: 0 5px;
+        padding: 5px 10px;
+        @include default_fontsize;
 
-        &:nth-of-type(1) {
-          margin-left: 0;
+        &:hover {
+          @include opacity(0.8);
         }
-        &:nth-last-of-type(1) {
-          margin-right: 0;
-        }
+      }
 
-        a {
-          display: inline-block;
-          padding: 5px 10px;
-          @include default_fontsize;
+      &.active {
+        color: #FFFF00;
 
-          &:hover {
-            @include opacity(0.8);
-          }
-        }
-        &.active {
-          color: #2020FF;
-
-          a:hover {
-            @include opacity(1);
-          }
+        a:hover {
+          @include opacity(1);
         }
       }
     }
@@ -65,11 +67,11 @@
     position: absolute;
     width: 100%;
     height: 5px;
-    background: #fff;
+    background: #FFFFFF;
   }
   &:before {
     top: 11px;
-    box-shadow: #fff 0 -11px 0 0;
+    box-shadow: #FFFFFF 0 -11px 0 0;
     @include transition(-webkit-transform 0.75s, box-shadow 0.2s 0.1s);
     @include transition(transform 0.75s, box-shadow 0.2s 0.1s);
   }
@@ -100,12 +102,13 @@
     right: -100%;
     top: 0;
     width: 80%;
-    background: #2020FF;
-    z-index: 12;
     padding: 0 70px;
+    z-index: 12;
+    color: #FFFFFF;
+    background: #0000FF;
     @include border-box;
-    @include transition(right 0.4s);
     @include valign_middle;
+    @include transition(right 0.4s);
 
     ul {
       display: inline-block;
@@ -116,20 +119,18 @@
       margin: 14px 0;
 
       a {
-        color: #000000;
         font-weight: bold;
         @include font-size(26px);
 
         &:hover {
-          text-decoration: none;
           @include opacity(0.8);
         }
       }
 
-      &.active > a {
-        color: #2020FF;
+      &.active {
+        color: #FFFF00;
 
-        &:hover {
+        a:hover {
           @include opacity(1);
         }
       }
