--- a/src/static/scss/header.scss
+++ b/src/static/scss/header.scss
@@ -8,6 +8,17 @@
   width: 100%;
   z-index: 100;
   background: rgba(green, 0.8);
+
+  .table {
+    display: table;
+    width: 100%;
+  }
+
+  .cell {
+    float: none;
+    display: table-cell;
+    vertical-align: middle;
+  }
 }
 
 #logo {
